# xarray-regridding

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readme.md
ci/requirements/: docs.yaml  environment.yaml
design/: bilinear-interpolation.ipynb
docs/: conf.py
example/: healpix_regrid.ipynb  healpix_regrid_test.ipynb
notebooks/: healpix_areas_connection.ipynb
xarray_healpy/: __init__.py  _healpy.py  conversions.py  grid.py  operations.py  regridder.py
xarray_healpy/interpolation/: bilinear.py  mask.py
xarray_healpy/interpolations/: bilinear.py
xarray_regridding/: __init__.py  grid.py  regridder.py  utils.py
xarray_regridding/healpix/: __init__.py
xarray_regridding/interpolation/: bilinear.py
