[project]
name = "xarray-healpy"
requires-python = ">= 3.10"
license = {text = "MIT"}
dependencies = [
    "xarray>=2023.11.0",
    "healpy",
    "numba",
    "numpy",
    "sparse",
    "scikit-learn",
    "opt_einsum",
    "cdshealpix",
    "astropy",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xarray_healpy"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "xarray_healpy"
